# ai-gent-smith

./: .gitignore  Cargo.toml  Readme.md
ai_gent_lib/: Cargo.toml
ai_gent_lib/dev_config/: fsm_config.json  fsm_config.toml  fsm_prompt  summary_prompt  sys_prompt
ai_gent_lib/src/: fsm.rs  fsm_chat_state.rs  lib.rs  llm_agent.rs  llm_service.rs
ai_gent_tools/: Cargo.toml  Readme.md
ai_gent_tools/dev_config/: code_agent.toml  fsm_config.json  fsm_config.toml  fsm_prompt  rag.toml  rag_2.toml
ai_gent_tools/python/: agent_config.py  create_agent_config.py  generate_code_agent_config.py  test_create_agent_config.py
ai_gent_web/: Cargo.toml
ai_gent_web/dev_config/: fda_challenge_config.json  fda_challenge_config.toml  fda_challenge_config_2.json  fda_challenge_example_1.toml  fda_challenge_example_2.toml  fda_challenge_exeample_3.toml  fsm_config.json  sys_prompt
ai_gent_web/docker/: Dockerfile  bootstraping.sh  build-amd64.sh  build-arm64.sh  build.sh  load_db.sh  run.sh  run_docker-amd64.sh  run_docker-arm64.sh  run_docker.sh  setup_db.sh
ai_gent_web/src/: agent_cards.rs  agent_workspace.rs  asset_cards.rs  asset_space_plot.rs  embedding_service.rs  fsm_chat_agent.rs  library_cards.rs  llm_agent.rs  main.rs  services.rs  session_cards.rs  show_single_asset.rs
ai_gent_web/templates/: agent_library.html  agent_workspace.html  app_page.html  asset_library.html  asset_space.html  asset_space_plot.html  create_asset.html  create_basic_agent.html  create_fsm_agent.html  d3_plot_script.html  head.html  sessions.html  simple_agent_config.json  simple_agent_config.json.template  simple_agent_config.toml.template  update_basic_agent.html  update_fsm_agent.html
ai_gent_web/tests/: api_test.sh
database/: boostraping.sh  boostraping.sql  bootstraping.sh  bootstraping.sql  db_schema.sql  mock_data.sql
database/migrations/: 20241002152024_add_agent_id_to_chats.sql  20241002214232_add_agent_type.sql  20241002215411_rename_agent_type.sql  20241004044902_chat_summary_col.sql  20241004053441_massage_add_col_role.sql  20250128022549_add_chat_status_col.sql  20250201055609_create_asset_table.sql  20250201154210_add_pgvector.sql  20250202140336_add_asset_column_to_agent.sql  20250207160407_add_fsm_state_to_chats.sql
dev_config/: fsm_config.json  summary_prompt
docker_files/python/: dockerfile
misc/chat_output/: chat-gpt-3.5-turbo.json  chat-gpt-4o-mini.json  chat-gpt-4o-party-mode.json  chat-gpt-4o-prompt-example2.json  chat-gpt-4o.json  chat-o1-mini.json
supporting_scripts/: convert_chat_pFDA_format.py  convert_chat_to_csv.py
supporting_scripts/pdf_to_embedding/: pdf_to_embedding.py  pdf_to_embedding_semantic_grouping.py
templates/: agent_library.html  app_page.html  create_simple_agent.html  head.html  setup_simple_agent.html  update_simple_agent.html  user_settings.html
tools/pdf_to_embedding/: Readme.md  pdf_to_embedding.py
