[package]
name = "ai_agent_smith"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
csv = "1.1"
clap = { version = "4.3", features = ["derive", "env"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.128"
# tron_app = { git = "https://github.com/cschin/tron.git" }
tron_app = { path = "../tron/tron_app" }
askama = "0.12.1"
tower-sessions = "0.13.0"
futures-util = "0.3.30"
futures = "0.3.30"
axum = "0.7.5"
tracing = "0.1.40"
serde = "1.0.210"
async-trait = "0.1"
uuid = "1.10.0"
lazy_static = "1.5.0"
once_cell = "1.20.0"

