[workspace]
members = [ "ai_gent_lib", "ai_gent_tools" , "ai_gent_web"]
resolver = "2"

[workspace.package]
name = "AI_Gent" # the name of the package
version = "0.1.0"    # the current version, obeying semver
edition = "2021"
authors = ["Jason Chin <cschin@infoecho.net>"]
description = "An Ai-gent applicaiton"
