[workspace]
members = [ "ai_gent_lib", "ai_gent_tools" , "ai_gent_web"]
resolver = "2"

[workspace.package]
name = "AI_Gent" # the name of the package
version = "0.1.0"    # the current version, obeying semver
edition = "2021"
authors = ["Jason Chin <cschin@infoecho.net>"]
description = "An Ai-gent applicaiton"

[workspace.dependencies]
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json",
] }
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15"
csv = "1.3.1"
clap = { version = "4.5.23", features = ["derive", "env"] }
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.135"
# tron_app = { git = "https://github.com/cschin/tron.git" }
tron_app = { path = "../tron/tron_app" }
askama = "0.12.1"
tower-sessions = "0.14.0"
futures-util = "0.3.31"
futures = "0.3.31"
axum = "0.8.1"
tracing = "0.1.41"
serde = "1.0.217"
async-trait = "0.1.85"
uuid = "1.12.1"
lazy_static = "1.5.0"
once_cell = "1.20.2"
tokio-test = "0.4.4"
rustyline = "15.0.0"
genai = "=0.1.19"