[package]
name = "ai_gent_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
dependencies.workspace = true
[dependencies]
sqlx = { workspace = true , features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json",
] }
tokio = { workspace = true, features = ["full"] }
dotenv = { workspace = true }
csv =  { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
askama = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
async-trait.workspace = true
uuid = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
tokio-test = { workspace = true }
rustyline = { workspace = true }
genai = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
tera = { workspace = true }
