[package]
name = "ai_gent_web"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
sqlx = { workspace = true , features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json",
] }
tokio = { workspace = true, features = ["full"] }
dotenv = { workspace = true }
csv =  { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
tron_app = { workspace = true }
askama = { workspace = true }
tower-sessions = { workspace = true } 
futures-util = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
tokio-test = { workspace = true }
rustyline = { workspace = true }
ai_gent_lib = {path = "../ai_gent_lib" }
pulldown-cmark = "0.12.1"
candle-transformers = "0.8.1"
candle-core = "0.8.1"
tokenizers = "0.21.0"
candle-nn = "0.8.1"
hf-hub = "0.4.1"
flate2 = "1.0.35"
ordered-float = { version = "4.6.0", default-features = false }
genai = {workspace = true}
bytes = "1.9.0"
pgvector = { version = "0.4", features = ["sqlx"] }